# ScrapeBuild

./: LICENSE  README.md  package-lock.json
backend/: .gitignore  pyproject.toml  startup.sh
backend/backend/: __init__.py
backend/backend/core/: database.py  logging_config.py  models.py  settings.py  utils.py
backend/backend/core/database/: database.py  models.py  repo.py  user.py  workflow.py
backend/backend/core/logging/: __init__.py  logging_conf.yml  logging_config.py
backend/backend/server/: app.py  exceptions.py  listen.py  middleware.py  schema.py
backend/backend/server/routes/: __init__.py  user.py  workflow.py
backend/backend/server/service/: user.py  workflow.py
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/actions/workflows/: getUserWorkflows.ts  index.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/shared/: BreadcrumbHeader.tsx  CustomDialogHeader.tsx  Logo.tsx  Sidebar.tsx  TooltipWrapper.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useIsAuthed.ts
frontend/src/hooks/mutations/: use-create-workflow.ts  use-delete-workflow.ts
frontend/src/hooks/query/: use-get-workflows.ts
frontend/src/lib/: constants.ts  store.ts  types.d.ts
frontend/src/lib/api/: workflows.ts
frontend/src/lib/helpers/: axiosClient.ts  custom-toast-handlers.ts  retrieve-axios-error-message.ts  type-guards.ts
frontend/src/state/: workflow-slice.ts
(+13 files in other folders)
