[tool.poetry]
name = "scrapeBuild"
version = "0.1.0"
description = ""
authors = ["ShiroDima <sd.akarawak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
aiohttp = "^3.11.18"
httpx = "^0.28.1"
termcolor = "^3.1.0"
aioredis = "^2.0.1"
psutil = "^7.0.0"
python-json-logger = "^3.3.0"
python-multipart = "^0.0.20"
sqlalchemy = "^2.0.40"
pydantic-settings = "^2.9.1"
asyncpg = "^0.30.0"
pendulum = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
